prod/wordpress/art101/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      #acme.cert-manager.io/http01-edit-in-place: "true"
      cert-manager.io/cluster-issuer: letsencrypt-staging
      kubernetes.io/ingress.class: nginx
    name: art-ingress-wordpress
    namespace: art
  spec:
    rules:
    - host: art.ccrow.org
      http:
        paths:
        - backend:
            service:
              name: art-wordpress
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - art.ccrow.org
      secretName: art5-tls
kind: List
metadata:
  resourceVersion: ""
